# RisikoCV

./: .gitignore  CMakeLists.txt
src/: System.cpp  main.cpp
